// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default export > should add banner - function 1`] = `
"/**
* app.ts
*/
export const name = 'foobar'"
`;

exports[`default export > should add banner 1`] = `
"/**
 * @license MIT
 */

export const name = 'foobar'"
`;

exports[`default export > should add footer - function 1`] = `
"export const name = 'foobar'

// app.ts"
`;

exports[`default export > should add footer 1`] = `
"export const name = 'foobar'

// @license MIT"
`;

exports[`default export > should not change file when banner/footer are missing 1`] = `"export const name = 'foobar'"`;

exports[`default export > should verbose work 1`] = `"export const name = 'foobar'"`;

exports[`named export > should add banner - function 1`] = `
"/**
* app.ts
*/
export const name = 'foobar'"
`;

exports[`named export > should add banner 1`] = `
"/**
 * @license MIT
 */

export const name = 'foobar'"
`;

exports[`named export > should add footer - function 1`] = `
"export const name = 'foobar'

// app.ts"
`;

exports[`named export > should add footer 1`] = `
"export const name = 'foobar'

// @license MIT"
`;

exports[`named export > should not change file when banner/footer are missing 1`] = `"export const name = 'foobar'"`;

exports[`named export > should verbose work 1`] = `"export const name = 'foobar'"`;
